--- a/package.json
+++ b/package.json
@@ -11,11 +11,10 @@
   ],
   "repository": "expressjs/serve-favicon",
   "dependencies": {
-    "etag": "~1.8.1",
-    "fresh": "0.5.2",
-    "ms": "2.1.1",
-    "parseurl": "~1.3.2",
-    "safe-buffer": "5.1.1"
+    "etag": "~1.8.0",
+    "fresh": "0.5.0",
+    "ms": "1.0.0",
+    "parseurl": "~1.3.1"
   },
   "devDependencies": {
     "eslint": "4.19.1",
