--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,16 +6,20 @@ environment:
     - nodejs_version: "1.8"
     - nodejs_version: "2.5"
     - nodejs_version: "3.3"
-    - nodejs_version: "4.8"
+    - nodejs_version: "4.9"
     - nodejs_version: "5.12"
-    - nodejs_version: "6.10"
-    - nodejs_version: "7.6"
+    - nodejs_version: "6.14"
+    - nodejs_version: "7.10"
+    - nodejs_version: "8.11"
+    - nodejs_version: "9.11"
 cache:
   - node_modules
 install:
   - ps: Install-Product node $env:nodejs_version
+  - npm config set shrinkwrap false
+  - if "%nodejs_version%" equ "0.8" npm config set strict-ssl false
   - if "%nodejs_version%" equ "0.8" npm rm --save-dev istanbul
-  - npm rm --save-dev eslint eslint-config-standard eslint-plugin-markdown eslint-plugin-promise eslint-plugin-standard
+  - for /f tokens^=2^ delims^=^" %%m in ('findstr /r /c:"eslint[^ ]" package.json') do call npm rm --save-dev %%m
   - if exist node_modules npm prune
   - if exist node_modules npm rebuild
   - npm install
